# homeSecurityAlarm

./: CMakeLists.txt  README.md
MicroPythonV/: assignment3_micropython.py
src/: CMakeLists.txt  main.c
